// SPDX-FileCopyrightText: 2022-present Intel Corporation
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package devices.v1;

option go_package = "github.com/onosproject/scaling-umbrella/gen/go/devices/v1";

import "protoc-gen-openapiv2/options/annotations.proto";
import "simcards/v1/simcards.proto";
//import "devicegroups/v1/devicegroups.proto";
import "google/api/field_behavior.proto";
import "pb/graphql.proto";
import "google/api/annotations.proto";

message Device {
  string device_id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {title: "The ID field.", description: "Unique identifier for devices", pattern: "[a-zA-Z]"},
    (google.api.field_behavior) = REQUIRED
  ];
  string name = 2;
  string description = 3;
  string attached = 4;
  string imei = 5;
  string ip = 6;
  simcards.v1.SimCard sim_card = 7;
//  repeated devicegroups.v1.DeviceGroup device_groups = 8;
}

message GetDevicesResponse {
  repeated Device devices = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "A list of Device objects"}];
}

message GetDevicesRequest {
  string enterprise_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    pattern: "[a-zA-Z]",
    title: "EnterpriseId",
    description: "Unique identifier for an enterprise",
    format: "string",
    example: "\"acme\""
  }];
  string site_id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    pattern: "[a-zA-Z]",
    title: "SiteId",
    description: "Unique identifier for a site",
    format: "string",
    example: "\"acme-chicago\""
  }];
}

service DeviceService {
  rpc GetDevices(GetDevicesRequest) returns (devices.v1.GetDevicesResponse) {
    option (danielvladco.protobuf.graphql.rpc) = {type: QUERY};
    option (google.api.http) = {
      get: "/api/v1/enterprises/{enterprise_id}/sites/{site_id}/devices",
      additional_bindings {
        // NOTE all the fields in the Request Parameter (EnterpriseId) which are not in the path
        // are automatically added to query parameters
        get: "/api/v1/devices"
      }
    };
  }
}
